# dev-stats-dashboard

./: .env.example  Makefile  README.md  pyproject.toml
dev_stats_dashboard/: app.py
