[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dev-stats-dashboard"
version = "0.1.0"
description = "GitHub contribution statistics web dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
dev-stats-dashboard = "dev_stats_dashboard.app:main"
